updated border radius at card ends to fix gap

--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,8 @@
 	border-bottom: 1pt solid;
 	height: 40px;
 	padding: 10px;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
+	border-top-left-radius: 8.5px;
+	border-top-right-radius: 8.5px;
 }
 
 h1 {
