--- a/src/components/anjMetrics/AnjMetrics.css
+++ b/src/components/anjMetrics/AnjMetrics.css
@@ -2,6 +2,6 @@
 	display: flex;
 	flex-direction: column;
 	padding: 30px;
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 8.5px;
+	border-bottom-right-radius: 8.5px;
 }
