--- a/src/components/antMetrics/AntMetrics.css
+++ b/src/components/antMetrics/AntMetrics.css
@@ -2,8 +2,8 @@
 	display: flex;
 	flex-direction: row;
 	padding: 30px;
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 8.5px;
+	border-bottom-right-radius: 8.5px;
 }
 
 .individual-stats {
